[mac debug] Regression: http/tests/websocket/tests/hybi/workers/worker-reload.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=207940 <rdar://problem/59592000>

Reviewed by Chris Dumez.

Covered by debug asserts.

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::connect):
Pass registrable domain instead of URL.
Isolate copy the domain before hopping to main thread for extra protection.


Canonical link: https://commits.webkit.org/220934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256949 268f45cc-cd09-0410-ab3c-d52691b4dbfc